--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
+    "echarts": "^5.4.3",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "vue3-carousel-nuxt": "^1.1.0"
